añadí la capacitacion de diseño de forma muy simple

--- a/src/components/pages/capacitaciones/info/res/styleSheets/info-p.css
+++ b/src/components/pages/capacitaciones/info/res/styleSheets/info-p.css
@@ -28,4 +28,7 @@
         .inf-intr-sec{
             background-color: #7237e6;
         }
+        .div-cont-inf{
+            position: static;
+        }
 }
